--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
+    "gpt-tokenizer": "^2.8.1",
     "input-otp": "^1.2.4",
     "jsdom": "^25.0.1",
     "lucide-react": "^0.453.0",
