--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,29 @@
-node_modules
-dist
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# Testing
+coverage/
+
+# Next.js
+.next/
+out/
+
+# Production
+build/
+dist/
+
+# Misc
 .DS_Store
-server/public
-vite.config.ts.*
-*.tar.gz
-/IMG_*.png
-repomix-output.*
+*.pem
+.env*
+!.env.example
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# AI Documentation System
+.docs/ai-notes/temp/
