--- a/package.json
+++ b/package.json
@@ -43,8 +43,6 @@
     "@replit/database": "^3.0.1",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@tanstack/react-query": "^5.60.5",
-    "@types/jsdom": "^21.1.7",
-    "@types/turndown": "^5.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -74,6 +72,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "turndown": "^7.2.0",
+    "uuid": "^11.0.4",
     "vaul": "^1.1.0",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
@@ -84,11 +83,14 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/jsdom": "^21.1.7",
+    "@types/luxon": "^3.4.2",
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@types/turndown": "^5.0.5",
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
