--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@replit/database": "^3.0.1",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
+    "@splinetool/react-spline": "^4.0.0",
     "@tanstack/react-query": "^5.60.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
