--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "turndown": "^7.2.0",
     "uuid": "^11.0.4",
     "vaul": "^1.1.0",
+    "vite-plugin-vercel": "^9.0.4",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.23.8"
