--- a/vercel.json
+++ b/vercel.json
@@ -2,26 +2,29 @@
   "version": 2,
   "builds": [
     {
-      "src": "dist/index.js",
+      "src": "server/index.ts",
       "use": "@vercel/node"
     },
     {
-      "src": "dist/public/**",
+      "src": "dist/**",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "dist/index.js"
+      "dest": "server/index.ts"
     },
     {
       "src": "^/assets/(.*)",
-      "dest": "dist/public/assets/$1"
+      "dest": "/dist/assets/$1"
+    },
+    {
+      "handle": "filesystem"
     },
     {
       "src": "/(.*)",
-      "dest": "dist/public/index.html"
+      "dest": "/dist/index.html"
     }
   ]
 }
